<resources>
    <string name="app_name">爱吖妹纸</string>
    <string name="exit_toast">再按一次退出程序哦~</string>
    <string name="jump">跳过</string>
    <string name="rv_with_footer_pull_load_more">上拉或点击加载更多</string>
    <string name="rv_with_footer_loading">加载中…</string>
    <string name="rv_with_footer_empty">没有数据啦</string>
    <string name="nanchen">nanchen</string>
    <string name="action_share">分享</string>
    <string name="scale_up_show_behavior">com.nanchen.aiyagirl.widget.behavior.ScaleUpShowBehavior</string>
    <string name="about_aiya">关于爱吖妹纸</string>
    <string name="about_aiyagirl">爱吖妹纸数据来源于代码家的干货集中营,那么多完整的App,你选择了我，这是我的幸运。
\n\n
从第一次在博客园上写博客到现在，我一次一次地提高博文的质量和代码的可读性，都是为了你们，因为有你们，才有我。
\n\n
这是我爱吖校推后的第二个开源的App，主要采取Retrofit+Rx+MVP这套最近火热的开发体系。
\n\n
期待你与我进行心灵交流。因为我也曾遇到各种棘手的问题，到处询问不到答案
\n\n
那个时候的我，也许正如现在的你。而我，也还在这条道路上默默前行。
    \n\n 数据来源于代码家的干货集中营https://gank.io，一切数据解释权归代码家所有。
    \n\n 关注我的github：https://github.com/nanchen2251
    \n\n 我的博客园：http://www.cnblogs.com/liushilin/
    \n\n 我的简书：http://www.jianshu.com/u/f690947ed5a6
    \n\n 项目完全开源，如果你觉得不错，请帮忙star一下吧，或者点击右上角的分享，分享给你的朋友，这是你对我最大的支持，非常感谢！</string>
    <string name="contact_me">联系我</string>
    <string name="blog">Email:
        \n liushilin520@foxmail.com
        \n liushilin2251@gmail.com</string>
    <string name="open">用到的开源库</string>
    <string name="open_source">com.squareup.retrofit2:retrofit:2.2.0
    \n\n com.squareup.retrofit2:adapter-rxjava:2.2.0
    \n\n com.jakewharton:butterknife:8.5.1
    \n\n com.github.bumptech.glide:glide:3.7.0
    \n\n cn.bingoogolapple:bga-swipebacklayout:1.0.8
    \n\n com.squareup.retrofit2:converter-gson:2.2.0
    \n\n io.reactivex:rxandroid:1.2.1
    \n\n com.github.Andy671:Dachshund-Tab-Layout:v0.3.0
    \n\n de.hdodenhof:circleimageview:2.1.0
    \n\n com.github.GrenderG:Toasty:1.1.3
    \n\n com.youth.banner:banner:1.4.9</string>

    <string name="string_share_text">发现了一个Retrofit+RxJava+Mvp架构的App，里面有大量IT干货，每天提供安卓，IOS等最新资讯，大力推荐哦~：https://github.com/nanchen2251/AiYaGirl[分享自爱吖妹纸]</string>
    <string name="github_issues">您好，很希望得到您的意见，由于没有线上反馈系统，您可以在GitHub的Issues处说明问题原因，也可以通过以下方式联系我，我将根据情况尽量处理哦 ~</string>


    <!--url-->
    <string name="string_url_AiYaGirl">https://github.com/nanchen2251/AiYaGirl</string>
    <string name="string_url_other">https://github.com/nanchen2251</string>
    <!--fir.im-->
    <string name="string_url_new_version">https://fir.im/AiYaGirl</string>
    <!--issues-->
    <string name="string_url_issues">https://github.com/nanchen2251/AiYaGirl/issues</string>
    <!--blog-->
    <string name="string_url_blog">http://www.cnblogs.com/liushilin/</string>
    <string name="string_url_gankio">http://gank.io/api</string>
</resources>
