<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageBg"
    tools:context="com.nanchen.aiyagirl.module.navhome.NavHomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
        android:id="@+id/nav_home_appbar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/nav_home_toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/blue"
            app:title="@string/app_name"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nav_home_image"
                android:src="@drawable/homepage_header"
                android:scaleType="fitXY"
                android:contentDescription="@null"/>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/nav_home_toolbar"
                app:navigationIcon="@mipmap/icon_back"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/nav_home_nestedScrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:textColor="@color/colorContent"
                android:text="@string/about_aiya"/>
            
            <android.support.v7.widget.CardView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:background="@color/colorWhite"
                    android:lineSpacingExtra="3dp"
                    android:padding="7dp"
                    android:textColor="@color/colorTitle"
                    android:textIsSelectable="true"
                    android:text="@string/about_aiyagirl"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:textColor="@color/colorContent"
                android:text="@string/open"/>

            <android.support.v7.widget.CardView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:lineSpacingExtra="3dp"
                    android:padding="7dp"
                    android:textColor="@color/colorTitle"
                    android:textIsSelectable="true"
                    android:text="@string/open_source"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:textColor="@color/colorContent"
                android:text="@string/contact_me"/>

            <android.support.v7.widget.CardView
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:background="@color/colorWhite"
                    android:lineSpacingExtra="3dp"
                    android:padding="7dp"
                    android:textColor="@color/colorTitle"
                    android:textIsSelectable="true"
                    android:text="@string/blog"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_home_fab"
        android:layout_margin="16dp"
        android:src="@mipmap/actionbar_share"
        app:layout_anchor="@id/nav_home_appbar"
        app:layout_anchorGravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>
